matomo/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo-db
  namespace: matomo
spec:
  selector:
    app: matomo-db
  ports:
    - port: 3306
      targetPort: 3306
