matomo/service-matomo.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: matomo
spec:
  selector:
    app: matomo
  ports:
    - port: 80
      targetPort: 80
