matomo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  namespace: matomo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - matomo.jonathanlore.fr
      secretName: matomo-tls
  rules:
    - host: matomo.jonathanlore.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
